--- a/custom_components/modded_thermostat/manifest.json
+++ b/custom_components/modded_thermostat/manifest.json
@@ -2,7 +2,7 @@
   "domain": "generic_thermostat",
   "name": "Generic Thermostat",
   "documentation": "https://www.home-assistant.io/integrations/generic_thermostat",
-  "requirements": [],
   "dependencies": ["sensor", "switch"],
-  "codeowners": []
+  "codeowners": [],
+  "iot_class": "local_polling"
 }
