--- a/custom_components/modded_thermostat/manifest.json
+++ b/custom_components/modded_thermostat/manifest.json
@@ -1,8 +1,8 @@
 {
-  "domain": "generic_thermostat",
-  "name": "Generic Thermostat",
+  "domain": "modded_thermostat",
+  "name": "Modded Generic Thermostat",
   "documentation": "https://www.home-assistant.io/integrations/generic_thermostat",
-  "requirements": [],
   "dependencies": ["sensor", "switch"],
+  "version": "1.0",
   "codeowners": []
 }
